--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,8 +1,6 @@
 name: Citibike Data Fetch
 
 on:
-  # 每小時觸發一次 (UTC 時間)。注意：GitHub Actions 的排程使用 UTC，
-  # 但我們的程式碼內部會根據紐約時區來記錄時間，所以結果符合需求
   workflow_dispatch:
   schedule:
     - cron: "0 * * * *"
@@ -30,9 +28,25 @@ jobs:
       - name: List files for debugging
         run: ls -R
 
-      # 若要保存產生的檔案，可使用 artifact 上傳功能
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: CitibikeData
-          path: data/
+      - name: Commit data files to data branch
+        run: |
+          # 設定 Git 使用者資訊
+          git config --global user.name "${GITHUB_ACTOR}"
+          git config --global user.email "${GITHUB_ACTOR}@users.noreply.github.com"
+          
+          # 取得遠端分支資訊
+          git fetch origin
+          
+          # 切換到 data 分支，若不存在則建立新分支
+          git checkout data || git checkout -b data
+          
+          # 將 data 資料夾加入版本控制
+          git add data/
+          
+          # 如果有變更則 commit
+          git diff --cached --exit-code || git commit -m "Update data files at $(date)"
+          
+          # 推送變更到遠端 data 分支
+          git push origin data
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
