--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -3,7 +3,7 @@ name: Citibike Data Fetch
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 4 * * *"
 
 jobs:
   build:
