--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,9 +1,9 @@
-name: Citibike Data Fetch
+Citibike Data Fetch 
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 4 * * *"
+    - cron: "0 * * * *"
 
 jobs:
   build:
